[package]
name = "escp"
version = "0.8.0"
edition = "2018"
author = "Charles Shiflett <cshiflett@ESnet>"
authors = [ "Charles Shiflett" ]
about = "Energy Sciences Network transfer tool (EScp)"
description = "Energy Sciences Network transfer tool (EScp)"
license = "BSD-3-Clause"

build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
libc = "0.*"
shadow-rs = "*"

[dependencies]
clap = { version = "*", features = ["derive"] }
regex = "1"
libc = "0.*"
subprocess = "0.*"
flatbuffers = "23.*"
log4rs = "1.*"
log = "*"
rand = "*"
shadow-rs = "*"
yaml-rust2 = "*"
hex = "*"
crossbeam-channel = "0.5"
clean-path = "*"
zstd-safe = "*"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[package.metadata.rpm]
package = "escp"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
escp = { path = "/usr/bin/escp" }
