[package]
name = "escp"
version = "0.9.0"
edition = "2021"
author = "Charles Shiflett <cshiflett@ESnet>"
authors = [ "Charles Shiflett" ]
about = "Energy Sciences Network transfer tool (EScp)"
description = "Energy Sciences Network transfer tool (EScp)"
license = "BSD-3-Clause"
homepage = "https://github.com/esnet/escp"
repository = "https://github.com/esnet/escp"
readme = "README.md"


build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
libc = "0.*"
shadow-rs = "0.*"

[dependencies]
clap = { version = "4.*", features = ["derive"] }
regex = "1.*"
libc = "0.*"
subprocess = "0.*"
flatbuffers = "25.*"
log = "0.*"
syslog = "7.*"
shadow-rs = "0.*"
yaml-rust2 = "0.*"
hex = "0.*"
crossbeam-channel = "0.5"
zstd-safe = "7.*"
chrono = "0.*"

[dev-dependencies]
ntest = "0.9.*"
serde = { version = "1.*", features = ["derive"] }
toml = "0.8.*"
serde_json = "1.*"
anyhow = "1.*"
blake3 = "1.*"
walkdir = "2.*"


[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[package.metadata.rpm]
package = "escp"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
escp = { path = "/usr/bin/escp" }
