[package]
name = "escp"
version = "0.7.0"
edition = "2018"
author = "Charles Shiflett <cshiflett@ESnet>"
about = "The ESnet Transfer Tool"

build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
libc = "0.*"
shadow-rs = "*"

[dependencies]
clap = { version = "*", features = ["derive"] }
regex = "1"
libc = "0.*"
subprocess = "0.*"
flatbuffers = "23.*"
log4rs = "1.*"
log = "*"
rand = "*"
shadow-rs = "*"
yaml-rust = "*"
hex = "*"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


